--- a/SisSis/SisSisViewController.xib
+++ b/SisSis/SisSisViewController.xib
@@ -41,7 +41,7 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">266</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUISegmentedControl" id="903535688">
+							<object class="IBUISegmentedControl" id="351138114">
 								<reference key="NSNextResponder" ref="156129625"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{79, 8}, {156, 30}}</string>
@@ -84,7 +84,7 @@
 						<string key="NSFrame">{{0, 416}, {320, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="903535688"/>
+						<reference key="NSNextKeyView" ref="351138114"/>
 						<string key="NSReuseIdentifierKey">_NS:371</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -96,18 +96,18 @@
 								<int key="IBUIStyle">1</int>
 								<reference key="IBUIToolbar" ref="156129625"/>
 							</object>
-							<object class="IBUIBarButtonItem" id="742496878">
+							<object class="IBUIBarButtonItem" id="349767906">
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<float key="IBUIWidth">19</float>
 								<reference key="IBUIToolbar" ref="156129625"/>
 								<int key="IBUISystemItemIdentifier">6</int>
 							</object>
-							<object class="IBUIBarButtonItem" id="673228254">
+							<object class="IBUIBarButtonItem" id="763795575">
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<reference key="IBUICustomView" ref="903535688"/>
+								<reference key="IBUICustomView" ref="351138114"/>
 								<reference key="IBUIToolbar" ref="156129625"/>
 							</object>
-							<object class="IBUIBarButtonItem" id="739125176">
+							<object class="IBUIBarButtonItem" id="946196001">
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<float key="IBUIWidth">18</float>
 								<reference key="IBUIToolbar" ref="156129625"/>
@@ -149,6 +149,39 @@
 					</object>
 					<int key="connectionID">11</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">segControl</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="351138114"/>
+					</object>
+					<int key="connectionID">20</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">todayButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="560398458"/>
+					</object>
+					<int key="connectionID">21</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">didPushedTodayButton:</string>
+						<reference key="source" ref="560398458"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">23</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">changedSegmentedControlValue:</string>
+						<reference key="source" ref="351138114"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">13</int>
+					</object>
+					<int key="connectionID">24</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -182,9 +215,9 @@
 						<reference key="object" ref="156129625"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="560398458"/>
-							<reference ref="673228254"/>
-							<reference ref="742496878"/>
-							<reference ref="739125176"/>
+							<reference ref="763795575"/>
+							<reference ref="349767906"/>
+							<reference ref="946196001"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -195,25 +228,25 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="673228254"/>
+						<reference key="object" ref="763795575"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="903535688"/>
+							<reference ref="351138114"/>
 						</array>
 						<reference key="parent" ref="156129625"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="903535688"/>
-						<reference key="parent" ref="673228254"/>
+						<reference key="object" ref="351138114"/>
+						<reference key="parent" ref="763795575"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
-						<reference key="object" ref="742496878"/>
+						<reference key="object" ref="349767906"/>
 						<reference key="parent" ref="156129625"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
-						<reference key="object" ref="739125176"/>
+						<reference key="object" ref="946196001"/>
 						<reference key="parent" ref="156129625"/>
 					</object>
 				</array>
@@ -236,24 +269,46 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">19</int>
+			<int key="maxID">24</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">SisSisViewController</string>
 					<string key="superclassName">TKCalendarMonthTableViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">toolBar</string>
-						<string key="NS.object.0">UIToolbar</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">toolBar</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="changedSegmentedControlValue:">id</string>
+						<string key="didPushedTodayButton:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="changedSegmentedControlValue:">
+							<string key="name">changedSegmentedControlValue:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="didPushedTodayButton:">
+							<string key="name">didPushedTodayButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="segControl">UISegmentedControl</string>
+						<string key="todayButton">UIBarButtonItem</string>
+						<string key="toolBar">UIToolbar</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="segControl">
+							<string key="name">segControl</string>
+							<string key="candidateClassName">UISegmentedControl</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="todayButton">
+							<string key="name">todayButton</string>
+							<string key="candidateClassName">UIBarButtonItem</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="toolBar">
 							<string key="name">toolBar</string>
 							<string key="candidateClassName">UIToolbar</string>
 						</object>
-					</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/SisSisViewController.h</string>
