--- a/SisSis/en.lproj/MainWindow.xib
+++ b/SisSis/en.lproj/MainWindow.xib
@@ -58,7 +58,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIResizesToFullScreen">YES</bool>
 			</object>
-			<object class="IBUINavigationController" id="1018509709">
+			<object class="IBUINavigationController" id="324643037">
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 					<int key="IBUIInterfaceOrientation">1</int>
@@ -67,7 +67,7 @@
 				<bool key="IBUIDefinesPresentationContext">YES</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIHorizontal">NO</bool>
-				<object class="IBUINavigationBar" key="IBUINavigationBar" id="1068729309">
+				<object class="IBUINavigationBar" key="IBUINavigationBar" id="92232265">
 					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<string key="NSFrameSize">{0, 0}</string>
@@ -79,25 +79,25 @@
 				</object>
 				<object class="NSArray" key="IBUIViewControllers">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIViewController" id="842792319">
+					<object class="IBUIViewController" id="80010635">
 						<string key="IBUITitle">SisSisViewController</string>
-						<object class="IBUINavigationItem" key="IBUINavigationItem" id="577215987">
+						<object class="IBUINavigationItem" key="IBUINavigationItem" id="466641445">
 							<string key="IBUITitle">すべてのカレンダー</string>
-							<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="881835723">
+							<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="543464664">
 								<string key="IBUITitle">カレンダー</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIStyle">1</int>
-								<reference key="IBUINavigationItem" ref="577215987"/>
+								<reference key="IBUINavigationItem" ref="466641445"/>
 							</object>
-							<object class="IBUIBarButtonItem" key="IBUIRightBarButtonItem" id="427885547">
+							<object class="IBUIBarButtonItem" key="IBUIRightBarButtonItem" id="400162378">
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIStyle">1</int>
-								<reference key="IBUINavigationItem" ref="577215987"/>
+								<reference key="IBUINavigationItem" ref="466641445"/>
 								<int key="IBUISystemItemIdentifier">4</int>
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIParentViewController" ref="1018509709"/>
+						<reference key="IBUIParentViewController" ref="324643037"/>
 						<string key="IBUINibName">SisSisViewController</string>
 						<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 							<int key="IBUIInterfaceOrientation">1</int>
@@ -132,9 +132,17 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">navController</string>
 						<reference key="source" ref="664661524"/>
-						<reference key="destination" ref="1018509709"/>
+						<reference key="destination" ref="324643037"/>
 					</object>
 					<int key="connectionID">34</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">pushedAddButton:</string>
+						<reference key="source" ref="400162378"/>
+						<reference key="destination" ref="664661524"/>
+					</object>
+					<int key="connectionID">42</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -172,47 +180,47 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">30</int>
-						<reference key="object" ref="1018509709"/>
+						<reference key="object" ref="324643037"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="1068729309"/>
-							<reference ref="842792319"/>
+							<reference ref="92232265"/>
+							<reference ref="80010635"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">31</int>
-						<reference key="object" ref="1068729309"/>
-						<reference key="parent" ref="1018509709"/>
+						<reference key="object" ref="92232265"/>
+						<reference key="parent" ref="324643037"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">32</int>
-						<reference key="object" ref="842792319"/>
+						<reference key="object" ref="80010635"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="577215987"/>
+							<reference ref="466641445"/>
 						</object>
-						<reference key="parent" ref="1018509709"/>
+						<reference key="parent" ref="324643037"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">33</int>
-						<reference key="object" ref="577215987"/>
+						<reference key="object" ref="466641445"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="881835723"/>
-							<reference ref="427885547"/>
+							<reference ref="543464664"/>
+							<reference ref="400162378"/>
 						</object>
-						<reference key="parent" ref="842792319"/>
+						<reference key="parent" ref="80010635"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">35</int>
-						<reference key="object" ref="881835723"/>
-						<reference key="parent" ref="577215987"/>
+						<reference key="object" ref="543464664"/>
+						<reference key="parent" ref="466641445"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">41</int>
-						<reference key="object" ref="427885547"/>
-						<reference key="parent" ref="577215987"/>
+						<reference key="object" ref="400162378"/>
+						<reference key="parent" ref="466641445"/>
 					</object>
 				</object>
 			</object>
@@ -265,7 +273,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">41</int>
+			<int key="maxID">42</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
